fixed responsive issues on mobile

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -36,7 +36,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 80%;
+    max-width: 95%;
 }
 
 .education-label {
@@ -111,7 +111,7 @@
 }
 
 .about-description {
-    font-weight: 500;
+    font-weight: 600;
     font-size: 28px;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -185,11 +185,23 @@
     .interest-list {
         grid-template-columns: 60%;
         row-gap: 10px;
-        width: 80%;
+        width: 95%;
     }
 
     .headshot-img {
         width: 250px;
         height: 250px;
+    }
+}
+
+@media (max-width: 400px) {
+    .about-description-container {
+        margin: 20px;
+        margin-top: 50px;
+    }
+
+    .headshot-img {
+        width: 225px;
+        height: 225px;
     }
 }
