--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -56,5 +56,6 @@
 
     .form-container {
         padding: 16px;
+        width: 75%;
     }
 }
