--- a/src/css/technicalSkills.css
+++ b/src/css/technicalSkills.css
@@ -96,6 +96,9 @@
     }
 
     .skills-selector-container {
-        width: 80%;
+        width: 95%;
     }
+}
+
+@media (max-width: 400px) {
 }
